Closed
Bug 845201
Opened 12 years ago
Closed 12 years ago
Iterating over Components throws an uncatchable exception
Categories
(Core :: XPConnect, defect)
Tracking
()
RESOLVED
FIXED
mozilla22
People
(Reporter: jruderman, Assigned: bholley)
References
Details
(Keywords: regression, testcase)
Attachments
(2 files)
164 bytes,
text/html
|
Details | |
2.61 KB,
patch
|
mrbkap
:
review+
|
Details | Diff | Splinter Review |
Result: No alert
Expected: "Not allowed" alert
Regression in the last day or so:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=e48e1afb1899&tochange=f9ece777368e
![]() |
||
Comment 1•12 years ago
|
||
Presumably a regression from bug 836301: we used to report an exception, now we just return false without reporting an exception, so there is nothing to catch.
Blocks: 836301
Assignee | ||
Comment 2•12 years ago
|
||
We only want fallback behavior here if the policy decides to fail silently. If
the policy passes *bp == false, we want to just throw.
Attachment #718498 -
Flags: review?(mrbkap)
Updated•12 years ago
|
Attachment #718498 -
Flags: review?(mrbkap) → review+
Assignee | ||
Comment 3•12 years ago
|
||
Assignee: nobody → bobbyholley+bmo
Comment 4•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
You need to log in
before you can comment on or make changes to this bug.
Description
•