Bug 845201 - Pass mayThrow=true to iterate. r=mrbkap

We only want fallback behavior here if the policy decides to fail silently. If
the policy passes *bp == false, we want to just throw.